@@ -1,0 +1,3 @@
+ALTER TABLE my_aspnet_Sessions CONVERT TO CHARACTER SET DEFAULT;
+
+UPDATE my_aspnet_SchemaVersion SET version=6;
