@@ -1,5 +1,6 @@
 Version 6.1.3
 - fixed compilation problem in NativeDriver inside ExecuteDirect  (bug #47354)
+- fixed default collation bug with session provider table (bug #47332)
 
 Version 6.1.2
 - fixed hanging after losing network connectivity to server (bug#43761) 
